# Protector

./: Dockerfile  Procfile  app.json  config.env_sample  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  stale.yml
Protector/: __init__.py  __main__.py  custom_filter.py  filters.py  listener.py  plugin.py
Protector/core/: Protector.py  __init__.py  base.py  client.py  database.py  errors.py  logging.py  plugin_extender.py  pool.py  protector.py
Protector/custom_plugins/: example.py
Protector/functions/: action.py  command.py  error.py
Protector/plugins/: admin.py  backups.py  evaluator.py  federation.py  language.py  main.py  muting.py  notes.py  purge.py  reporting.py  restriction.py  rules.py  staff_tools.py  users.py  welcome.py
Protector/utils/: __init__.py  admin_check.py  config.py  extractor.py  string_handler.py  tools.py  types.py
language/: en.yml  id.yml
