[tool.poetry]
name = "Protector"
version = "1.3.3"
description = "Telegram group management bot made with Python"
license = "AGPL-3.0-or-later"
authors = ["Kunal-Diwan"]
readme = "README.md"
homepage = "https://github.com/Kunal-Diwan/Protector#readme"
repository = "https://github.com/Kunal-Diwan/Protector"
documentation = "https://TheProtector.tk"
keywords = ["chatbot", "bot", "python", "protector", "pyrogram"]
classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
]

[tool.poetry.scripts]
protector = "protector:start"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
aiohttp = "^3.7.4"
aiorun = "^2021.8.1"
colorlog = "^5.0.1"
covid = "^2.4.1"
dnspython = "^2.1.0"
motor = "^2.4.0"
Pyrogram = "^1.2.9"
python-dotenv = "^0.17.1"
spamwatch = "^0.3.0"
TgCrypto = "^1.2.2"
toml = "^0.10.2"
uvloop = {version ="^0.15.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pre-commit = "^2.12.1"
pylint = "^2.8.2"

[tool.poetry.extras]
uvloop = ["uvloop"]


#
# Black config
#
[tool.black]
line-length = 100
target-version = ["py38"]

#
# Isort Config
#
[tool.isort]
profile = "black"
known_third_party = ["aiohttp", "aiorun", "colorlog", "covid", "dotenv", "motor", "pymongo", "pyrogram", "spamwatch", "yaml"]

#
# Pylint Config
#
[tool.pylint]
    [tool.pylint.messages_control]
    disable = [
        "attribute-defined-outside-init",
        "too-few-public-methods",
        "missing-class-docstring",
        "logging-fstring-interpolation",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.logging]
    logging-format-style = "new"

    [tool.pylint.format]
    max-line-length = 100

    [tool.pylint.design]
    max-args = 15


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
